Updated the user page

--- a/src/pages/User/User.scss
+++ b/src/pages/User/User.scss
@@ -1,3 +1,5 @@
 .user-info {
-    grid-column: center-start / center-end;
+    grid-column: center-start / 6;
+    background-color: var(--color-primary);
+    color: var(--color-white);
 }
