--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -2,8 +2,10 @@
     display: grid;
     grid-template-columns:
         [full-start] minmax(6rem, 1fr) [center-start] repeat(
-            12,
-            [col-start] minmax(min-content, 10rem) [col-end]
+            var(--number-of-columns),
+            [col-start] minmax(min-content, calc(var(--grid-width) / var(--number-of-columns)))
+                [col-end]
         )
         [center-end] minmax(6rem, 1fr) [full-end];
+    background-color: var(--color-grey-dark-3);
 }
