--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -5,14 +5,16 @@
     --color-primary-dark: #303f9f;
     --color-primary-accent: #536dfe;
 
-    --color-grey-light-1: #faf9f9;
-    --color-grey-light-2: #f4f2f2;
-    --color-grey-light-3: #f0eeee;
-    --color-grey-light-4: #ccc;
+    --color-grey-light-1: #f4f2f2;
+    --color-grey-light-2: #f0eeee;
+    --color-grey-light-3: #ccc;
 
     --color-grey-dark-1: #999;
     --color-grey-dark-2: #777;
     --color-grey-dark-3: #333;
+
+    --color-white: #fff;
+    --color-white-alternate: #f6f8fa;
 
     // SHADOWS
     --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
@@ -24,8 +26,9 @@
 
     // GRID
     --grid-width: 120rem;
-    --grid-column-gap: 8rem;
-    --grid-row-gap: 6rem;
+    --number-of-columns: 12;
+    --grid-column-gap: 2rem;
+    --grid-row-gap: 2rem;
 
     // DIVIDER
     --line: 1px solid var(--color-primary-accent);
