--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,9 +1,21 @@
 body {
-    font-family: 'Lato', sans-serif;
+    font-family: var(--primary-font-family);
     font-weight: 400;
     font-size: var(--default-font-size);
     line-height: 1.7;
     color: var(--color-grey-dark-3);
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+
+a {
+    text-decoration: none;
+    color: var(--color-primary);
+    transition: var(--transition);
+
+    &:hover,
+    &:focus {
+        text-decoration: underline;
+        color: var(--color-primary-dark);
+    }
 }
