--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,7 +6,7 @@
     --color-primary-accent: #536dfe;
 
     --color-grey-light-1: #f4f2f2;
-    --color-grey-light-2: #f0eeee;
+    --color-grey-light-2: #e7e4e4;
     --color-grey-light-3: #ccc;
 
     --color-grey-dark-1: #999;
@@ -16,9 +16,11 @@
     --color-white: #fff;
     --color-white-alternate: #f6f8fa;
 
+    --color-link: #0366d6;
+
     // SHADOWS
-    --shadow-light: 0 2rem 4rem rgba(0, 0, 0, 0.06);
-    --shadow-medium: 0 2rem 5rem rgba(0, 0, 0, 0.1);
+    --shadow-light: 0 2rem 5rem rgba(0, 0, 0, 0.06);
+    --shadow-medium: 0 2rem 5rem rgba(0, 0, 0, 0.12);
     --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
 
     // FONT
@@ -33,7 +35,7 @@
     --grid-row-gap: 2rem;
 
     // DIVIDER
-    --line: 1px solid var(--color-primary-accent);
+    --line: 1px solid var(--color-grey-light-2);
 
     // ANIMATIONS
     --transition: all 0.2s ease-in-out;
