--- a/src/components/UserInfo/UserInfoStyles.scss
+++ b/src/components/UserInfo/UserInfoStyles.scss
@@ -21,9 +21,8 @@
     }
 
     &__item {
-        // TODO: split into seperate sections above and below borders so the last child has the border and margin-bottom
         margin-top: 0.6rem;
-        font-size: 1.5rem;
+        font-size: 1.6rem;
 
         display: flex;
         align-items: center;
@@ -45,7 +44,9 @@
             padding-bottom: 1rem;
         }
         &__octicon {
+            width: 16px;
             margin-right: 1rem;
+            margin-bottom: 2px;
         }
     }
 }
