--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,3 +1,8 @@
+:root {
+    --primary-font-family: 'Lato', sans-serif;
+    --default-font-size: 1.6rem;
+}
+
 body {
     font-family: var(--primary-font-family);
     font-weight: 400;
