--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -7,6 +7,7 @@
 
 .container {
     display: grid;
+    grid-template-rows: repeat(3, min-content);
     grid-template-columns:
         [full-start] minmax(6rem, 1fr) [center-start] repeat(
             var(--number-of-columns),
