--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -4,6 +4,9 @@
     --shadow-medium: 0 2rem 5rem rgba(0, 0, 0, 0.12);
     --shadow-dark: 0 2rem 6rem rgba(0, 0, 0, 0.3);
 
+    --shadow-card: 0 1rem 3rem -1.5rem rgba(0, 0, 0, 0.2);
+    --shadow-card-active: 0 0.8rem 2rem -1.5rem rgba(0, 0, 0, 0.2);
+
     // DIVIDER
     --line: 1px solid var(--color-grey-light-2);
 
