--- a/src/components/RepoItem/ReposItemStyles.scss
+++ b/src/components/RepoItem/ReposItemStyles.scss
@@ -1,43 +1,73 @@
 .repo-item {
-    padding: 2rem;
-    height: 18rem;
+    padding: 1.8rem;
+    // height: minmax(30rem, auto);
     border-radius: 0.4rem;
     box-shadow: var(--shadow-card);
+    font-size: 1.4rem;
+    color: var(--color-grey-dark-2);
+    background-color: var(--color-white);
+
+    display: grid;
+    grid-template-rows: min-content minmax(6rem, min-content) repeat(2, min-content);
+    grid-gap: 0.8rem;
+    align-content: space-between;
 
     &:hover,
     &:focus {
         box-shadow: var(--shadow-card-active);
     }
 
-    svg {
-        max-width: 16px;
-        margin-right: 1rem;
-    }
-
-    &__name {
-        overflow: hidden;
-        white-space: nowrap;
-        text-overflow: ellipsis;
-        margin-bottom: 0.75rem;
-        font-size: 1.8rem;
-        font-weight: 700;
-        letter-spacing: -0.5px;
-    }
-
-    &__description,
-    &__attributes {
-        font-size: 14px;
-        margin-bottom: 2rem;
-        color: var(--color-grey-dark-2);
-    }
-
-    &__attributes {
-        display: flex;
-    }
-
     &__name {
         display: flex;
         align-items: center;
+        grid-row: 1;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        color: var(--color-grey-dark-3);
+        font-size: 1.8rem;
+        font-weight: 700;
+        letter-spacing: -0.5px;
+
+        &__octicon {
+            max-width: 16px;
+            margin-right: 0.8rem;
+        }
+    }
+
+    &__description {
+        grid-row: 2;
+    }
+
+    &__attributes {
+        display: flex;
+
+        &__octicon {
+            max-width: 16px;
+            margin-right: 0.5rem;
+            margin-bottom: 3px;
+        }
+
+        & > * {
+            display: flex;
+            align-items: center;
+            margin-right: 1.3rem;
+        }
+
+        &--1 {
+            grid-row: 3;
+
+            justify-content: space-between;
+            // flex-direction: column;
+        }
+
+        &--2 {
+            grid-row: 4;
+        }
+
+        &__watching {
+            margin-right: auto;
+        }
     }
 }
 
