--- a/src/components/Repos/ReposStyles.scss
+++ b/src/components/Repos/ReposStyles.scss
@@ -1,7 +1,13 @@
 .repos {
     grid-column: col-start 5 / center-end;
 
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-    grid-gap: 1rem;
+    &__title {
+        padding: 1rem;
+    }
+
+    &__items {
+        display: grid;
+        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+        grid-gap: 1rem;
+    }
 }
