--- a/src/pages/User/UserStyles.scss
+++ b/src/pages/User/UserStyles.scss
@@ -1,3 +1,3 @@
-.container--user {
-    background-color: var(color-primary-dark);
+.container {
+    grid-template-rows: repeat(3, minmax(40rem, min-content));
 }
