--- a/src/styles/_layout.scss
+++ b/src/styles/_layout.scss
@@ -1,5 +1,5 @@
 :root {
-    --grid-width: 120rem;
+    --grid-width: 130rem;
     --number-of-columns: 16;
     --grid-column-gap: 2rem;
     --grid-row-gap: 2rem;
@@ -7,7 +7,6 @@
 
 .container {
     display: grid;
-    grid-template-rows: repeat(3, min-content);
     grid-template-columns:
         [full-start] minmax(6rem, 1fr) [center-start] repeat(
             var(--number-of-columns),
@@ -15,4 +14,5 @@
                 [col-end]
         )
         [center-end] minmax(6rem, 1fr) [full-end];
+    background-color: var(--color-white-alternate);
 }
