Updated the user page styles and completed V1 of the home page

--- a/src/pages/Home/HomeStyles.scss
+++ b/src/pages/Home/HomeStyles.scss
@@ -1,9 +1,98 @@
-.search-form {
-    grid-column: center-start / center-end;
-    grid-row: 2;
-    justify-self: center;
+.home {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: var(--color-black);
+    height: 100vh;
 
-    &__text-input {
-        width: 50rem;
+    &__form {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        background-color: transparent;
+        padding: 2rem;
+        margin-bottom: 20vh;
+        text-align: center;
+        height: inherit;
+
+        &__github-icon {
+            color: var(--color-primary);
+        }
+
+        &__label {
+            display: flex;
+            flex-direction: column;
+            font-size: 4rem;
+            font-weight: 500;
+            margin: 2rem;
+            color: var(--color-primary-light);
+            align-items: center;
+        }
+
+        &__input {
+            height: 5rem;
+            width: 30vw;
+            margin-top: 2rem;
+            padding: 1rem;
+            font-size: 3rem;
+            font-weight: 400;
+            text-align: center;
+            background-color: var(--color-primary-dark-2);
+            border-bottom: 3px solid var(--color-primary-dark-2);
+            outline: 0;
+            border: 0;
+            height: 7vh;
+            color: var(--color-primary-light);
+            transition: all 0.1s;
+
+            &:focus,
+            &:active {
+                border-bottom: 3px solid var(--color-primary-light);
+
+                &::placeholder {
+                    opacity: 0;
+                    visibility: hidden;
+                }
+            }
+
+            &::placeholder {
+                color: var(--color-primary-light);
+                font-size: 2.5rem;
+                opacity: 0.5;
+            }
+        }
+        &__input:placeholder-shown + &__label {
+            opacity: 0;
+            visibility: hidden;
+            transform: translateY(-4rem);
+        }
+
+        &__submit {
+            color: var(--color-white);
+            background-color: var(--color-primary);
+            padding: 1rem 2rem;
+            border-radius: 3rem;
+            box-shadow: 0 0.5rem 2rem -1rem var(--color-primary);
+            filter: contrast(1.25);
+            border: 2px solid var(--color-primary);
+            text-transform: uppercase;
+            font-size: 0.4rem;
+            width: 25vw;
+            min-width: 20%;
+            max-width: 20%;
+            font-weight: 500;
+            letter-spacing: 0.5px;
+            margin-top: 3rem;
+            transition: all 0.2s cubic-bezier(0.23, 1, 0.32, 1) 0s;
+
+            &:hover,
+            &:focus {
+                cursor: pointer;
+                box-shadow: 0 0.5rem 2rem -1rem var(--color-primary-dark-1);
+                background: var(--color-primary-dark-1);
+                border: 2px solid var(--color-primary-dark-1);
+            }
+        }
     }
 }
