--- a/src/components/Repos/ReposStyles.scss
+++ b/src/components/Repos/ReposStyles.scss
@@ -1,5 +1,5 @@
 .repos {
-    grid-column: col-start 5 / center-end;
+    grid-column: center-start / center-end;
 
     &__title {
         padding: 1rem;
@@ -7,7 +7,8 @@
 
     &__items {
         display: grid;
-        grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-        grid-gap: 1rem;
+        grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
+        grid-auto-flow: row;
+        grid-gap: 1.2rem;
     }
 }
