--- a/src/components/UserInfo/UserInfoStyles.scss
+++ b/src/components/UserInfo/UserInfoStyles.scss
@@ -2,7 +2,9 @@
     grid-column: center-start / col-end 4;
     display: flex;
     flex-direction: column;
+    margin: 2rem 0;
     padding: 2rem;
+    border-radius: 2rem;
     font-weight: 600;
 
     svg {
@@ -15,6 +17,12 @@
         border-bottom: var(--line);
         padding-bottom: 1.5rem;
 
+        svg {
+            color: var(--color-grey-dark-3);
+            margin-right: 0.6rem;
+            margin-bottom: 3px;
+        }
+
         &__img {
             align-self: center;
             border-radius: 50%;
@@ -24,13 +32,12 @@
         }
 
         &__name {
-            margin-bottom: -1.2rem;
+            margin-bottom: -1.1rem;
         }
 
         &__login {
             font-size: 2.2rem;
             font-weight: 300;
-            margin-bottom: -0.5rem;
         }
     }
 
