--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -1,16 +1,18 @@
 :root {
-    --color-primary: #3f51b5;
-    --color-primary-light: #c5cae9;
-    --color-primary-dark: #303f9f;
-    --color-primary-accent: #536dfe;
+    --color-primary: #66a6ff;
+    --color-primary-light: #c8e1ff;
+    --color-primary-dark-1: #3d8eff;
+    --color-primary-dark-2: #26303c;
 
     --color-grey-light-1: #e7e4e4;
     --color-grey-light-2: #ddd;
     --color-grey-light-3: #ccc;
 
-    --color-grey-dark-1: #999;
-    --color-grey-dark-2: #777;
+    --color-grey-dark-1: #777;
+    --color-grey-dark-2: #666;
     --color-grey-dark-3: #333;
+
+    --color-black: #1a1e22;
 
     --color-white: #fff;
     --color-white-alternate: #f6f8fa;
