--- a/src/pages/Home/HomeStyles.scss
+++ b/src/pages/Home/HomeStyles.scss
@@ -33,6 +33,7 @@
         &__input {
             height: 5rem;
             width: 30vw;
+            min-width: 25rem;
             margin-top: 2rem;
             padding: 1rem;
             font-size: 3rem;
@@ -62,11 +63,6 @@
                 opacity: 0.5;
             }
         }
-        &__input:placeholder-shown + &__label {
-            opacity: 0;
-            visibility: hidden;
-            transform: translateY(-4rem);
-        }
 
         &__submit {
             color: var(--color-white);
@@ -74,12 +70,11 @@
             padding: 1rem 2rem;
             border-radius: 3rem;
             box-shadow: 0 0.5rem 2rem -1rem var(--color-primary);
-            filter: contrast(1.25);
             border: 2px solid var(--color-primary);
-            text-transform: uppercase;
             font-size: 0.4rem;
             width: 25vw;
-            min-width: 20%;
+            height: 6rem;
+            min-width: 10rem;
             max-width: 20%;
             font-weight: 500;
             letter-spacing: 0.5px;
