Updated home page styling

--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -13,6 +13,7 @@
     --color-grey-dark-3: #333;
 
     --color-black: #1a1e22;
+    --color-black-dark: #1a1d20;
 
     --color-white: #fff;
     --color-white-alternate: #f6f8fa;
