--- a/src/pages/Home/HomeStyles.scss
+++ b/src/pages/Home/HomeStyles.scss
@@ -18,6 +18,7 @@
 
         &__github-icon {
             color: var(--color-primary);
+            margin-bottom: 2rem;
         }
 
         &__label {
@@ -25,42 +26,42 @@
             flex-direction: column;
             font-size: 4rem;
             font-weight: 500;
-            margin: 2rem;
+            margin-bottom: 3.5rem;
             color: var(--color-primary-light);
             align-items: center;
         }
 
         &__input {
             height: 5rem;
-            width: 30vw;
-            min-width: 25rem;
+            width: 25vw;
+            min-width: 40rem;
+            height: 8rem;
             margin-top: 2rem;
             padding: 1rem;
-            font-size: 3rem;
+            font-size: 3.2rem;
             font-weight: 400;
             text-align: center;
             background-color: var(--color-primary-dark-2);
             border-bottom: 3px solid var(--color-primary-dark-2);
             outline: 0;
             border: 0;
-            height: 7vh;
             color: var(--color-primary-light);
-            transition: all 0.1s;
-
-            &:focus,
-            &:active {
-                border-bottom: 3px solid var(--color-primary-light);
-
-                &::placeholder {
-                    opacity: 0;
-                    visibility: hidden;
-                }
-            }
+            transition: all 0.3s;
 
             &::placeholder {
                 color: var(--color-primary-light);
-                font-size: 2.5rem;
+                font-size: 3.2rem;
                 opacity: 0.5;
+            }
+
+            &:focus,
+            &:active {
+                border: 3px solid var(--color-primary-light);
+                background-color: var(--color-black-dark);
+
+                &::placeholder {
+                    visibility: hidden;
+                }
             }
         }
 
@@ -72,14 +73,12 @@
             box-shadow: 0 0.5rem 2rem -1rem var(--color-primary);
             border: 2px solid var(--color-primary);
             font-size: 0.4rem;
-            width: 25vw;
+            width: 15rem;
             height: 6rem;
-            min-width: 10rem;
-            max-width: 20%;
             font-weight: 500;
             letter-spacing: 0.5px;
-            margin-top: 3rem;
-            transition: all 0.2s cubic-bezier(0.23, 1, 0.32, 1) 0s;
+            // margin-top: 3rem;
+            transition: all 0.3s cubic-bezier(0.23, 1, 0.32, 1) 0s;
 
             &:hover,
             &:focus {
