--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,5 +1,8 @@
 :root {
-    --primary-font-family: 'Lato', sans-serif;
+    --primary-font-family: 'Lato', system, -apple-system, 'BlinkMacSystemFont', 'Roboto', 'Segoe UI',
+        'Arial', sans-serif;
+    --mono-font-family: 'Fira Code', 'Fira Mono', 'Roboto Mono', 'Lucida Console', 'JetBrainsMono',
+        'Consolas', monospace;
     --default-font-size: 1.6rem;
 }
 
@@ -24,4 +27,49 @@ a {
     &:hover {
         text-decoration: underline;
     }
+}
+
+@font-face {
+    font-family: 'Lato';
+    src: url('../assets/fonts/Lato/Lato-Regular.woff2') format('woff2'),
+        url('../assets/fonts/Lato/Lato-Regular.woff') format('woff'),
+        url('../assets/fonts/Lato/Lato-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Lato';
+    src: url('../assets/fonts/Lato/Lato-Light.woff2') format('woff2'),
+        url('../assets/fonts/Lato/Lato-Light.woff') format('woff'),
+        url('../assets/fonts/Lato/Lato-Light.ttf') format('truetype');
+    font-weight: 300;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Lato';
+    src: url('../assets/fonts/Lato/Lato-Bold.woff2') format('woff2'),
+        url('../assets/fonts/Lato/Lato-Bold.woff') format('woff'),
+        url('../assets/fonts/Lato/Lato-Bold.ttf') format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Fira Code';
+    src: url('../assets/fonts/FiraCode/FiraCode-Regular.woff2') format('woff2'),
+        url('../assets/fonts/FiraCode/FiraCode-Regular.woff') format('woff'),
+        url('../assets/fonts/FiraCode/FiraCode-Regular.ttf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Fira Code';
+    src: url('../assets/fonts/FiraCode/FiraCode-Medium.woff2') format('woff2'),
+        url('../assets/fonts/FiraCode/FiraCode-Medium.woff') format('woff'),
+        url('../assets/fonts/FiraCode/FiraCode-Medium.ttf') format('truetype');
+    font-weight: 500;
+    font-style: normal;
 }
