--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -9,6 +9,7 @@
 
     // DIVIDER
     --line: 1px solid var(--color-grey-light-2);
+    --dashed-line: 3px dashed var(--color-grey-light-2);
 
     // ANIMATIONS
     --transition: all 0.2s ease-in-out;
