Added state reset on returning to the home page

--- a/src/components/RepoItem/ReposItemStyles.scss
+++ b/src/components/RepoItem/ReposItemStyles.scss
@@ -30,7 +30,7 @@
         letter-spacing: -0.5px;
         font-family: var(--mono-font-family);
 
-        &__octicon {
+        svg {
             max-width: 16px;
             margin-right: 0.8rem;
         }
@@ -43,7 +43,7 @@
     &__attributes {
         display: flex;
 
-        &__octicon {
+        svg {
             max-width: 16px;
             margin-right: 0.5rem;
             margin-bottom: 3px;
