--- a/src/components/Spinner/SpinnerStyles.scss
+++ b/src/components/Spinner/SpinnerStyles.scss
@@ -3,7 +3,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    align-items: flex-start;
+    align-items: center;
 }
 
 .spinner {
