Started error handling for api requests

--- a/src/pages/Home/HomeStyles.scss
+++ b/src/pages/Home/HomeStyles.scss
@@ -66,6 +66,10 @@
                     opacity: 0;
                 }
             }
+
+            &--error {
+                //TODO: add error styling
+            }
         }
 
         &__submit {
