--- a/src/styles/_utils.scss
+++ b/src/styles/_utils.scss
@@ -12,5 +12,5 @@
     --dashed-line: 3px dashed var(--color-grey-light-2);
 
     // ANIMATIONS
-    --transition: all 0.2s ease-in-out;
+    --transition: all 0.3s;
 }
