--- a/src/pages/User/UserStyles.scss
+++ b/src/pages/User/UserStyles.scss
@@ -10,10 +10,7 @@
     background-color: var(--color-white-alternate);
     grid-gap: var(--grid-gap);
 
-    &__section-1 {
-        & > * {
-            margin: 2rem 0;
-            padding: 2rem;
-        }
+    & > * {
+        margin-bottom: 5rem;
     }
 }
