--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -1,8 +1,7 @@
 :root {
     --color-primary: #66a6ff;
     --color-primary-light: #c8e1ff;
-    --color-primary-dark-1: #3d8eff;
-    --color-primary-dark-2: #26303c;
+    --color-primary-dark: #3d8eff;
 
     --color-grey-light-1: #e7e4e4;
     --color-grey-light-2: #ddd;
@@ -12,8 +11,10 @@
     --color-grey-dark-2: #666;
     --color-grey-dark-3: #333;
 
-    --color-black: #1a1e22;
-    --color-black-dark: #1a1d20;
+    --color-dark: #15202b;
+    --color-dark-light: #253341;
+    --color-dark-light-2: #6888a5;
+    --color-dark-darker: #131d27;
 
     --color-white: #fff;
     --color-white-alternate: #f6f8fa;
