--- a/src/components/UserInfo/UserInfoStyles.scss
+++ b/src/components/UserInfo/UserInfoStyles.scss
@@ -1,14 +1,22 @@
 .user-info {
-    grid-column: center-start / col-end 4;
+    grid-column: center-start / col-end 5;
     display: flex;
     flex-direction: column;
-    border-radius: 2rem;
+    justify-content: flex-start;
+    border-radius: var(--border-radius);
     font-weight: 600;
+    color: var(--color-white);
+    padding: 2rem;
+    background-color: var(--color-dark-light);
+    height: max-content;
+
+    a {
+        color: var(--color-primary);
+    }
 
     svg {
         width: 16px;
         margin-right: 1rem;
-        // margin-bottom: 1px;
     }
 
     & > *:not(:first-child) {
@@ -16,32 +24,48 @@
     }
 
     & > *:not(:last-child) {
-        padding-bottom: 1.2rem;
-        border-bottom: var(--line);
+        padding-bottom: 1.5rem;
+        border-bottom: var(--line-light);
     }
 
     &__top {
+        display: flex;
+        flex-direction: column;
+
         svg {
-            color: var(--color-grey-dark-3);
+            color: var(--color-white);
             margin-right: 0.6rem;
             margin-bottom: 4px;
         }
 
         &__img {
-            align-self: center;
-            border-radius: 50%;
-            box-shadow: var(--shadow-medium);
-            width: 100%;
-            margin-bottom: 1rem;
+            display: flex;
+            justify-content: center;
+
+            img {
+                border-radius: 50%;
+                width: 80%;
+                margin-bottom: 1rem;
+            }
         }
 
         &__name {
             margin-bottom: -1.1rem;
+            text-align: center;
+            align-self: center;
         }
 
         &__login {
             font-size: 2.2rem;
             font-weight: 300;
+            text-align: center;
+            align-self: center;
+        }
+
+        &__bio {
+            margin-top: 0.2rem;
+            align-self: center;
+            text-align: center;
         }
     }
 
