--- a/src/pages/Home/HomeStyles.scss
+++ b/src/pages/Home/HomeStyles.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: var(--color-black);
+    background-color: var(--color-dark);
     height: 100vh;
 
     &__form {
@@ -37,8 +37,8 @@
             padding: 1rem;
             font-size: 3rem;
             text-align: center;
-            background-color: var(--color-primary-dark-2);
-            border-bottom: 3px solid var(--color-primary-dark-2);
+            background-color: var(--color-dark-light);
+            border-bottom: 3px solid var(--color-dark-light);
             font-family: var(--mono-font-family);
             font-weight: 500;
             outline: 0;
@@ -57,7 +57,7 @@
             &:focus,
             &:active {
                 border: 3px solid var(--color-primary-light);
-                background-color: var(--color-black-dark);
+                background-color: var(--color-dark-darker);
 
                 &::placeholder {
                     visibility: hidden;
@@ -106,9 +106,9 @@
             &:hover,
             &:focus {
                 cursor: pointer;
-                box-shadow: 0 0.5rem 2rem -1rem var(--color-primary-dark-1);
-                background: var(--color-primary-dark-1);
-                border: 2px solid var(--color-primary-dark-1);
+                box-shadow: 0 0.5rem 2rem -1rem var(--color-primary-dark);
+                background: var(--color-primary-dark);
+                border: 2px solid var(--color-primary-dark);
             }
         }
 
