--- a/src/pages/User/UserStyles.scss
+++ b/src/pages/User/UserStyles.scss
@@ -20,6 +20,6 @@
 
     &__section-2 {
         padding: 4rem 0;
-        // background-color: var(--color-dark);
+        background-color: var(--color-dark);
     }
 }
