--- a/src/components/Header/HeaderStyles.scss
+++ b/src/components/Header/HeaderStyles.scss
@@ -12,7 +12,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        margin-left: 1.5rem;
+        margin-right: 1.5rem;
         margin-top: 1rem;
         height: var(--starting-width);
         width: var(--starting-width);
@@ -27,6 +27,10 @@
         &:focus {
             cursor: pointer;
         }
+    }
+
+    &__home {
+        margin-left: 1.5rem;
     }
 
     &__form {
@@ -70,15 +74,7 @@
                     font-family: var(--mono-font-family);
                     font-size: 1.8rem;
                     font-weight: 500;
-                    opacity: 0.5;
-                }
-
-                &:focus,
-                &:active {
-                    &::placeholder {
-                        visibility: hidden;
-                        opacity: 0;
-                    }
+                    opacity: 0.7;
                 }
 
                 &--error {
