--- a/src/components/Repos/ReposStyles.scss
+++ b/src/components/Repos/ReposStyles.scss
@@ -10,7 +10,9 @@
 
     &__title {
         font-size: 2.8rem;
-        border-bottom: var(--dashed-line-dark);
+        color: var(--color-white);
+
+        border-bottom: var(--dashed-line-light);
     }
 
     &__dropdown-wrapper {
@@ -19,7 +21,7 @@
 
         &__label {
             margin: 0 1rem;
-            color: var(--color-grey-dark-1);
+            color: var(--color-grey-light-1);
             font-weight: 300;
         }
     }
@@ -35,13 +37,12 @@
             justify-content: space-between;
             align-items: center;
             width: 100%;
-            font-size: 1.4rem;
+            font-size: 1.5rem;
             font-weight: 600;
             line-height: 1;
             text-align: left;
-            color: var(--color-primary-dark);
-            background-color: transparent;
-            border: 1px solid rgba(0, 118, 255, 0.25);
+            background-color: #fff;
+            border: 1px solid #fff;
             padding: 10px 7px;
             border-radius: 5px;
             transition: var(--transition);
@@ -49,8 +50,8 @@
             &:hover,
             &:focus {
                 cursor: pointer;
-                background: rgba(0, 118, 255, 0.1);
-                border-color: rgba(0, 118, 255, 0.1);
+                background: rgb(220, 237, 255);
+                border-color: rgb(220, 237, 255);
             }
 
             svg {
@@ -60,7 +61,11 @@
             }
 
             &--open {
-                background: rgba(0, 118, 255, 0.1);
+                background: rgb(220, 237, 255);
+                border-radius: 0;
+                border-top-left-radius: 5px;
+                border-top-right-radius: 5px;
+
                 svg {
                     transition: var(--transition);
                     transform: rotate(180deg);
@@ -83,13 +88,6 @@
                 border-radius: 0;
                 transition: var(--transition);
 
-                &:first-of-type {
-                    button {
-                        border-top-left-radius: 5px;
-                        border-top-right-radius: 5px;
-                    }
-                }
-
                 &:last-of-type {
                     button {
                         border-bottom-left-radius: 5px;
@@ -99,9 +97,8 @@
 
                 button {
                     border: 0;
-                    border-bottom: 1px solid rgba(0, 118, 255, 0.1);
-                    color: var(--color-primary-dark);
-                    background: rgba(0, 118, 255, 0.1);
+                    border-bottom: 1px solid rgb(220, 237, 255);
+                    background: #fff;
                     padding: 10px 7px;
                     width: 100%;
                     font-size: 1.4rem;
@@ -112,7 +109,7 @@
                     &:hover,
                     &:focus {
                         cursor: pointer;
-                        background: rgba(0, 118, 255, 0.2);
+                        background: rgb(220, 237, 255);
                     }
                 }
             }
@@ -128,6 +125,6 @@
         display: grid;
         grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
         grid-auto-flow: row;
-        grid-gap: 1.2rem;
+        grid-gap: 2rem;
     }
 }
