--- a/src/styles/_theme.scss
+++ b/src/styles/_theme.scss
@@ -10,6 +10,7 @@
     --color-grey-dark-1: #777;
     --color-grey-dark-2: #666;
     --color-grey-dark-3: #333;
+    --color-grey-dark-4: #222;
 
     --color-dark: #15202b;
     --color-dark-light: #253341;
